Fixed overflowed greeting for mobile

--- a/src/styles/components/_popup.scss
+++ b/src/styles/components/_popup.scss
@@ -20,7 +20,13 @@
     &--first-login{
         width: 45rem;
         padding: 0;
-        border: 1px solid var(--color-primary-5);        
+        border: 1px solid var(--color-primary-5);
+        @media only screen and (max-width: $bp-smallest){
+            width: 40rem;
+        }
+        @media only screen and (max-width: $bp-tiny){
+            width: 38rem;
+        }        
     }
 
     &__btn{
@@ -70,19 +76,18 @@
 
     &__greeting{
         text-align: center;
-        padding: 2rem;
+        padding: 1.5rem 2rem 1rem 2rem;
         background-color: var(--color-primary-3);
         color: var(--color-grey-dark-1);
         &__h{
-            font-size: 2.6rem;
+            font-size: 2rem;
             font-weight: 400;
-            line-height: 1;
-            margin-bottom: 1rem;
+            margin-bottom: .5rem;
+            color: var(--color-grey-dark-2);
         }
 
         &__span{
-            line-height: 1;
-            padding-top: 1rem;
+            padding-top: .7rem;
             border-top: 1px solid var(--color-primary-1);
             display: block;
             font-size: 1.4rem;
